# flowengo

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: app.css  app.tsx  common-routes.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  crypto.rs  helpers.rs  lib.rs  main.rs  model.rs
src/common/actions/dpop-all-data/: index.ts
src/common/actions/get-app-state/: index.ts
src/common/actions/get-protected-data/: index.ts
src/common/actions/log-out/: index.ts
src/common/actions/sign-in/: index.ts
src/common/actions/sign-up/: index.ts
src/common/actions/update-protected-data/: index.ts
src/common/components/editor/: index.tsx
src/common/components/fallbackRender/: index.tsx
src/common/components/marker/: index.tsx
src/common/components/scroll-slider/: index.tsx
src/common/constants/: index.ts  routest.ts
src/common/events/: index.ts
src/common/helpers/: copy-clipboard.ts  format-date-from-iso.ts  genarate-password.ts  promise-with-delay.ts  save-local-project-id.ts  stronghold.ts
src/common/hooks/: use-disable-back.ts  use-drop-data-modal.ts  use-dropdown-action.ts  use-main-resize.ts  use-updater.tsx
src/common/stores/: app.ts
src/layouts/dashboard/: index.tsx
src/routes/: index.tsx
src/routes/auth/: index.tsx  schema.ts
src/routes/dashboard/: index.tsx
src/routes/project/: index.tsx
(+94 files in other folders)
